--- a/templates/base.html
+++ b/templates/base.html
@@ -30,17 +30,17 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
+                    <li><a href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
                     {% if session.user %}
                         <li><a href="#">My Profile</a></li>
-                        <li><<a href="#">View Dictionary</a></li>
                         <li><a href="#">Add Definition</a></li>
-                            {% if session.user == "admin" %}
-                                <li><a href="#">Manage Users</a></li>
-                            {% endif %}
-                        <li><a href="#">Logout</a></li>
-                        {% else %}
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
+                        {% if session.user|lower == "admin" %}
+                            <li><a href="#">Manage Users</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Login</a></li>
+                        <li><a href="{{ url_for('register') }}">Register</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -49,21 +49,20 @@
         <!-- mobile side navbar -->
 
         <ul class="sidenav" id="mobile-demo">
+            <li><a href="{{ url_for('home_page') }}">Home</a></li>
+            <li><<a href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
             {% if session.user %}
-                {% if session.user %}
-                    <li><a href="#">My Profile</a></li>
-                    <li><<a href="#">View Dictionary</a></li>
-                    <li><a href="#">Add Definition</a></li>
-                        {% if session.user == "admin" %}
-                            <li><a href="#">Manage Users</a></li>
-                        {% endif %}
-                    <li><a href="#">Logout</a></li>
-                    {% else %}
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Register</a></li>
+                <li><a href="#">My Profile</a></li>
+                <li><a href="#">Add Definition</a></li>
+                {% if session.user|lower == "admin" %}
+                    <li><a href="#">Manage Users</a></li>
                 {% endif %}
-            </ul>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
+            </ul>
         </ul>
     </header>
 
