--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,19 @@
             <div class="row">
                 <div class="col s12">
                     <h1 class="jumbotron-header">The complete A&#8211;Z of fitness</h1>
-                    <a href="/" class="btn-large signup">Sign up now</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <a href="{{ url_for('register') }}" class="btn-large signup">Sign up now</a>
+                </div>
+                <div class="col-s12">
+                    <a href="/" class="btn-large yellow">Search our dictionary</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-s12">
+                    <span>Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
                 </div>
             </div>
         </section>
