--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                     <li><a href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
                     {% if session.user %}
                         <li><a href="#">My Profile</a></li>
-                        <li><a href="#">Add Definition</a></li>
+                        <li><a href="{{ url_for('add_definition') }}">Add Definition</a></li>
                         {% if session.user|lower == "admin" %}
                             <li><a href="#">Manage Users</a></li>
                         {% endif %}
@@ -53,7 +53,7 @@
             <li><<a href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
             {% if session.user %}
                 <li><a href="#">My Profile</a></li>
-                <li><a href="#">Add Definition</a></li>
+                <li><a href="{{ url_for('add_definition') }}">Add Definition</a></li>
                 {% if session.user|lower == "admin" %}
                     <li><a href="#">Manage Users</a></li>
                 {% endif %}
