--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -17,8 +17,11 @@
         {% else %}
             {% for term in terms %}
                 <div class="row">
-                    <div class="col-s12">
+                    <div class="col s12 l3">
                         <span>{{ term.term_name }}</span>
+                    </div>
+                    <div class="col s12 l9">
+                        <span>{{ term.term_definition }}</span>
                     </div>
                 </div>
             {% endfor %}
