--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -15,13 +15,25 @@
                 </div>
             </div>
         {% else %}
+            {% for letter in letters %}
+                <div class="letters-container">
+                    <div class="row">
+                        <div class="col-s12">
+                            <h1>{{ letter }}</h1>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
             {% for term in terms %}
                 <div class="row">
                     <div class="col s12 l3">
                         <span>{{ term.term_name }}</span>
                     </div>
-                    <div class="col s12 l9">
+                    <div class="col s12 l7">
                         <span>{{ term.term_definition }}</span>
+                    </div>
+                    <div class="col s12 l2">
+                        <span>Created by&#58; {{ term.created_by }}</span>
                     </div>
                 </div>
             {% endfor %}
