--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -36,6 +36,14 @@
                         <span>Created by&#58; {{ term.created_by }}</span>
                     </div>
                 </div>
+                {% if session.user|lower == "admin" or session.user|lower == term.created_by|lower %}
+                    <div class="row">
+                        <div class="col s12">
+                            <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-large red">Delete term</a>
+                            <a href="#" class="btn-large blue">Edit term details</a>
+                        </div>
+                    </div>
+                {% endif %}
             {% endfor %}
         {% endif %}
 
