--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col s12">
             <p>Delete the account for {{ username }}</p>
-            <a class="btn-large red" href="#">Delete Account</a>
+            <a class="btn-large red" href="{{ url_for('delete_account', username=username)}}">Delete Account</a>
         </div>
     </div>
 
