--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col s12">
                 <p>Username &#58; <span>{{ username }}</span></p>
-                <a href="#" class="btn-large blue">Update Details</a>
+                <a href="{{ url_for('update_profile', username=username) }}" class="btn-large blue">Update Details</a>
             </div>
         </div>
     </div>
