--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col s12">
                         <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-large red">Delete term</a>
-                        <a href="#" class="btn-large blue">Edit term details</a>
+                        <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-large blue">Edit term details</a>
                     </div>
                 </div>
             {% endif %}
