--- a/templates/edit_term.html
+++ b/templates/edit_term.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
-
 {% block content %}
 
-<h1 class="center-align">Add Term</h1>
+    <h1 class="center-align">Update Information for {{ term.term_name }}</h1>
 
-<div class="container">
-    <form class="col s12" method="POST" action="{{ url_for('add_definition') }}">
+    <form method="POST" action="{{ url_for('edit_term', term_id=term._id) }}">
         <!-- term name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-dumbbell"></i>                
-                <input id="term_name" name="term_name" type="text" minlength="2" maxlength="50" class="validate">
+                <input id="term_name" name="term_name" value="{{ term.term_name }}" type="text" minlength="2" maxlength="50" class="validate">
                 <label for="category_name">Term name</label>
             </div>
         </div>
@@ -18,7 +16,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt"></i>
-                <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" placeholder="Add your definition here. Please try to be as clear as possible." required></textarea>
+                <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" required>{{ term.term_definition }}</textarea>
                 <label for="term_definition">Term definition</label>
             </div>
         </div>
@@ -26,11 +24,10 @@
         <div class="row center-align">
             <div class="col s6 offset-s3">
                 <button type="submit" class="btn-large green darken-2">
-                    Add to dictionary
+                    Update term information
                 </button>
             </div>
         </div>
     </form>
-</div>
 
 {% endblock %}
