--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -14,7 +14,7 @@
                 <span>{{ user.email_address }}</span>
             </div>
             <div class="col s12 l4">
-                <a href="#" class="btn red">Delete user</a>
+                <a href="{{ url_for('delete_user', user_id=user._id) }}" class="btn red">Delete user</a>
                 <a href="#" class="btn teal">Edit user details</a>
             </div>
         </div>
