created function to enable admin to add new user to the db

--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -21,7 +21,7 @@
     {% endfor %}
     <div class="row">
         <div class="col s12">
-            <a href="#" class="btn-large green">Add New User</a>
+            <a href="{{ url_for('add_new_user') }}" class="btn-large green">Add New User</a>
         </div>
     </div>
 </div>
