started function to enable user to search data

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,8 @@ nav .brand-logo {
 }
 
 .brand-logo {
-    font-family: 'Langar', cursive;
+    font-family: 'Bodoni Moda', serif;
+    text-transform: uppercase;
     margin-left: 1rem;
     text-shadow: 2px 2px #b8860b;
 }
