--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="center-align">Dictionary</h1>
 
-    {% if terms.length == 0 %}
+    {% if terms|length == 0 %}
         <div class="row">
             <div class="col-s12">
                 <h2><strong>No terms have been added to the dictionary yet. Be the first to contribute to our community by adding a definition below.</strong></h2>
