--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="jumbotron center-align">
-    <div class="overlay">
+
+    <div class="jumbotron center-align">
         <section class="callout">
             <div class="row">
                 <div class="col s12">
                     <h1 class="jumbotron-header">The complete A&#8211;Z of fitness</h1>
                 </div>
             </div>
+            {% if not session.user %}
             <div class="row">
                 <div class="col s12">
                     <a href="{{ url_for('register') }}" class="btn-large signup">Sign up now</a>
@@ -22,28 +23,74 @@
                     <span>Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
                 </div>
             </div>
+            {% endif %}
         </section>
     </div>
-</div>
-<div class="maps-container center-align">
-    <h1 class="maps-header">Where to Find Us</h1>
-    <div class="row">
-        <div class="col s12 l4 body-address">
-            <p class="maps-para"><i class="fas fa-map-marker-alt"></i> 93 Crown Street 
-                <br>
-                London
-                <br>
-                SW5 7NL
-            </p>
-            <p class="maps-para"><i class="fas fa-phone-square"></i> &#40;078&#41; 11 033 461</p>
-            <p class="maps-para"><i class="fas fa-at"></i> <a href="mailto:info@budgethelper.com">info&#64;budgethelper.com</a></p>
-            <p class="maps-para"><i class="fas fa-door-open"></i> Open Mon-Sun 6am - midnight</p>
-        </div>
-        <div class="col s12 l8">
-            <div id="map">
-
+    {% if session.user %}
+        <h1 class="center-align">Welcome, {{ session.user }}</h1>
+    {% endif %}
+    <div class="search-container center-align">
+        <div class="row">
+            <div class="col s12">
+                <form method="POST" action="{{ url_for('search') }}">
+                    <div class="row valign-wrapper">
+                        <div class="input-field col s12 m9">
+                            <i class="fas fa-search prefix"></i>
+                            <input id="query" name="query" type="text">
+                            <label for="query">Search</label>
+                        </div>
+                        <div class="col s12 m3">
+                            <a href="" class="red btn">Reset</a>
+                            <button type="submit" class="btn teal">
+                                Search
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
- </div>
+    {% if session.user %}
+        <div class="contributions-container">
+            <div class="row">
+                <div class="col s12">
+                    <h2>My contributions</h2>
+                </div>
+            </div>
+            {% for term in terms %}
+                {% if term.created_by|lower == session.user|lower %}
+                    <div class="row">
+                        <div class="col s12 l4">
+                            <span>{{ term.term_name }}</span>
+                        </div>
+                        <div class="col s12 l8">
+                            <span>{{ term.term_definition }}</span>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% else %}
+        <div class="maps-container center-align">
+            <h1 class="maps-header">Where to Find Us</h1>
+            <div class="row">
+                <div class="col s12 l4 body-address">
+                    <p class="maps-para"><i class="fas fa-map-marker-alt"></i> 93 Crown Street 
+                        <br>
+                        London
+                        <br>
+                        SW5 7NL
+                    </p>
+                    <p class="maps-para"><i class="fas fa-phone-square"></i> &#40;078&#41; 11 033 461</p>
+                    <p class="maps-para"><i class="fas fa-at"></i> <a href="mailto:info@budgethelper.com">info&#64;budgethelper.com</a></p>
+                    <p class="maps-para"><i class="fas fa-door-open"></i> Open Mon-Sun 6am - midnight</p>
+                </div>
+                <div class="col s12 l8">
+                    <div id="map">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
