--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 /*-- base content --*/
 
 body {
-    background-color: #fafafa;
+    background-color: #f0efbd;
+    font-family: 'Commissioner', sans-serif;
 }
 
 .preloader-wrapper {
@@ -25,6 +26,10 @@ nav .brand-logo {
     text-transform: uppercase;
     margin-left: 1rem;
     text-shadow: 2px 2px #b8860b;
+}
+
+.nav-link {
+    font-size: 1.3rem;
 }
 
 .sidenav {
@@ -69,18 +74,49 @@ main {
 .jumbotron-header {
     padding: 5px;
     font-size: 2rem;
-    color: #a55a5a;
+    color: #fafafa;
     text-shadow: 3px 3px #212121;
     margin-top: 30px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+    font-family: 'Big Shoulders Inline Text', cursive;
 }
 
 .signup {
+    font-family: 'Commissioner', sans-serif;
     font-size: 1.2rem;
+    text-transform: capitalize;
+    background-color: #3da040;
     border-radius: 10px;
     height: 40px;
     line-height: 40px;
+}
+
+.signup:hover {
+    background-color: rgb(40, 135, 40);
+}
+
+.search-btn {
+    background-color: #977318;
+    font-family: 'Commissioner', sans-serif;
+    text-transform: capitalize;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 15px;
+    border-radius: 10px;
+}
+
+.search-btn:hover {
+    background-color: #83610d;
+}
+
+.login-notice {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 2px 15px;
+    border-radius: 10px;
+}
+
+.login-notice a,
+.login-notice a:hover {
+    color: #000000;
 }
 
 .maps-header {
@@ -92,6 +128,14 @@ main {
     font-size: 0.8rem;
     color: #121212;
     margin: 15px 10px;
+}
+
+.body-address a {
+    color: #121212;
+}
+
+.body-address a:hover {
+    text-decoration: underline;
 }
 
 #map {
@@ -180,7 +224,7 @@ main {
     text-align: center;
     bottom: 0;
     left: 0;
-    background-color: #000555;
+    background: url(/static/images/footer_bg.png);
     color: #ffffff;
     width: 100%;
     padding-top: 10px;
@@ -201,10 +245,17 @@ main {
 
 .page-footer a {
     color: #ffffff;
+    height: 35px;
+    line-height: 35px;
+    margin-left: 0;
 }
 
 .page-footer a:hover {
     text-decoration: underline;
+}
+
+.brand-logo img {
+    width: 100%;
 }
 
 .social-media-header {
@@ -256,6 +307,11 @@ main {
         height: 45px;
         line-height: 45px;
     }
+
+    .search-btn {
+        height: 40px;
+        line-height: 40px;
+    }
 }
 
 @media screen and (min-width: 360px) {
@@ -304,11 +360,15 @@ main {
     .registration-heading {
         font-size: 2.4rem;
     }
+
+    .brand-logo img {
+        width: 80%;
+    }
 }
 
 @media screen and (min-width: 540px) {
     nav .brand-logo {
-        font-size: 2.3rem;
+        font-size: 2.6rem;
     }
 
     main {
@@ -330,6 +390,16 @@ main {
         line-height: 55px;
     }
 
+    .search-btn {
+        height: 48px;
+        line-height: 48px;
+        padding: 0 30px;
+    }
+
+    .login-notice-wrapper {
+        padding-bottom: 30px;
+    }
+
     .maps-header,
     .login-heading,
     .registration-heading {
@@ -342,6 +412,21 @@ main {
 
     .info-container h6 {
         font-size: 1.15rem;
+    }
+
+    .brand-logo img {
+        width: 65%;
+    }
+}
+
+@media screen and (min-width: 601px) {
+    .search-buttons {
+        margin-top: 1.2rem;
+    }
+    
+    .brand-logo img {
+        width: 90%;
+        padding-top: 2.6rem;
     }
 }
 
@@ -367,6 +452,21 @@ main {
         font-size: 2rem;
         height: 65px;
         line-height: 65px;
+    }
+
+    .search-btn {
+        font-size: 1.3rem;
+        height: 54px;
+        line-height: 54px;
+        padding: 0 28px;
+    }
+
+    .search-buttons button {
+        margin: 0 10px;
+    }
+
+    .info-container h6 {
+        padding-top: 0.7rem;
     }
 
     .info-container address {
@@ -395,6 +495,10 @@ main {
     .registration .input-field .prefix {
         font-size: 2rem;
         top: 0.5rem;
+    }
+
+    .brand-logo img {
+        width: 100%;
     }
 }
 
