--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,19 @@
                 </div>
             </div>
             {% if not session.user %}
-            <div class="row">
+            <div class="row btn-wrapper">
                 <div class="col s12">
                     <a href="{{ url_for('register') }}" class="btn-large signup">Sign up now</a>
                 </div>
-                <div class="col-s12">
-                    <a href="/" class="btn-large yellow">Search our dictionary</a>
+            </div>
+            <div class="row btn-wrapper">
+                <div class="col s12">
+                    <a href="{{ url_for('search') }}" class="btn-large search-btn">Search dictionary</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-s12">
-                    <span>Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
+            <div class="row login-notice-wrapper">
+                <div class="col s12">
+                    <span class="login-notice">Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
                 </div>
             </div>
             {% endif %}
@@ -29,17 +31,17 @@
     {% if session.user %}
         <h1 class="center-align">Welcome, {{ session.user }}</h1>
     {% endif %}
-    <div class="search-container center-align">
+    <div class="container search-container center-align">
         <div class="row">
             <div class="col s12">
                 <form method="POST" action="{{ url_for('search') }}">
-                    <div class="row valign-wrapper">
-                        <div class="input-field col s12 m9">
+                    <div class="row">
+                        <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
                             <input id="query" name="query" type="text">
                             <label for="query">Search</label>
                         </div>
-                        <div class="col s12 m3">
+                        <div class="col s12 m5 l4 search-buttons">
                             <a href="" class="red btn">Reset</a>
                             <button type="submit" class="btn teal">
                                 Search
