--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             {% endfor %}
         </div>
     {% else %}
-        <div class="maps-container center-align">
+        <div class="container maps-container center-align">
             <h1 class="maps-header">Where to Find Us</h1>
             <div class="row">
                 <div class="col s12 l4 body-address">
