--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,12 @@
         {% endblock %}
     </main>
 
+    <div id="returnToTop">
+        <a href="#">
+            <i class="fas fa-hand-point-up tooltipped" data-tooltip="BACK TO TOP"></i>
+        </a>
+	</div>
+
     <footer class="page-footer">
         <div class="info-container">
             <div class="row">
