--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,30 +179,20 @@ main {
     font-weight: 500;
 }
 
-/*-- login page --*/
+/*-- login and registration pages --*/
 
 .login-heading,
 .registration-heading {
     font-size: 2rem;
-    font-family: 'Roboto', sans-serif;
+}
+
+.sign-in,
+.registration {
+    margin: 30px 5px;
 }
 
 .input-field label {
     color: #333222;
-}
-
-/*-- registration page --*/
-
-/* .registration,
-.sign-in {
-    margin: 30px 40px;
-    /* border: 2px solid #676767;
-    border-radius: 10px;
-    background-color: #fefefe;
-} */
-
-.sign-in {
-    margin: 30px 5px;
 }
 
 .sign-in .input-field .prefix,
@@ -211,9 +201,16 @@ main {
     top: 0.8rem;
 }
 
-.complete-registration,
-.complete-login {
+.register,
+.login {
     border-radius: 10px;
+}
+
+.register {
+    height: 48px;
+    line-height: 48px;
+    font-size: 12px;
+    padding: 0 15px;
 }
 
 .register-link,
@@ -359,6 +356,13 @@ main {
         font-size: 1rem;
     }
 
+    .register {
+        height: 54px;
+        line-height: 54px;
+        font-size: 15px;
+        padding: 0 28px;
+    }
+
     .info-container h6 {
         font-size: 1.1rem;
     }
@@ -446,6 +450,10 @@ main {
     .search-buttons {
         margin-top: 1.2rem;
     }
+
+    .sign-in {
+        margin: 30px;
+    }
     
     .brand-logo img {
         width: 90%;
@@ -506,11 +514,8 @@ main {
         font-size: 3.2rem;
     }
     
+    .sign-in,
     .registration {
-        margin: 40px 50px 30px 50px;
-    }
-
-    .sign-in {
         margin: 30px 40px;
     }
 
@@ -533,9 +538,10 @@ main {
     .maps-para {
         margin: 15px 20px 15px 0px;
     }
-    
+
+    .sign-in,
     .registration {
-        margin: 50px 70px 50px 70px;
+        margin: 30px 100px;
     }
 
     .page-footer {
