--- a/templates/login.html
+++ b/templates/login.html
@@ -2,33 +2,43 @@
 
 {% block content %}
 
-    <h1 class="login-heading center-align">Log into your account</h1>
-
-    <form class="sign-in" method="POST" action="{{ url_for('login') }}">
+    <div class="container">
         <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-user prefix left"></i>
-                <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                <label for="username">Username</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-key prefix left"></i>
-                <input id="password" name="password" type="password" class="validate" required>
-                <label for="password">Password</label>
+            <div class="col s12">
+                <h1 class="login-heading center-align">Log into your account</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col s12">
+                <form class="sign-in" method="POST" action="{{ url_for('login') }}">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-user prefix left"></i>
+                            <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="fas fa-key prefix left"></i>
+                            <input id="password" name="password" type="password" class="validate" required>
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row center-align">
+                        <div class="col s12">
+                            <button type="submit" class="btn-large green darken-2 login">
+                                Log in
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
         <div class="row center-align">
             <div class="col s12">
-                <button type="submit" class="btn-large green darken-2 complete-login">
-                    Log in
-                </button>
+                <h6>Not signed up yet&#63; Register for a free account <a class="register-link" href="{{ url_for('register') }}"><strong>here</strong></a>.</h6>
             </div>
-        </div>
-    </form>
-
-    <div class="row center-align">
-        <div class="col s12">
-            <h6>Not signed up yet&#63; Register for a free account <a class="register-link" href="{{ url_for('register') }}"><strong>here</strong></a>.</h6>
         </div>
     </div>
 
