--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
-            <li><<a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
+            <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
             {% if session.user %}
                 <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
                 <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
