--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -66,10 +66,12 @@
                         </div>
                     </div>
                     {% if session.user|lower == "admin" or session.user|lower == term.created_by|lower %}
-                        <div class="row">
-                            <div class="col s12">
-                                <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-large red">Delete term</a>
-                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-large blue">Edit term details</a>
+                        <div class="row entry-block">
+                            <div class="col s6">
+                                <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small delete right red"><span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i></a>
+                            </div>
+                            <div class="col s6">
+                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue"><span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i></a>
                             </div>
                         </div>
                     {% endif %}
@@ -77,9 +79,9 @@
             </div>
         {% endif %}
         {% if session.user %}
-            <div class="row">
+            <div class="row center-align add-entry">
                 <div class="col-s12">
-                    <a href="{{ url_for('add_definition') }}" class="btn-large green">Add term</a>
+                    <a href="{{ url_for('add_definition') }}" class="btn-large add green">Add term</a>
                 </div>
             </div>
         {% endif %}
