--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -68,10 +68,14 @@
                     {% if session.user|lower == "admin" or session.user|lower == term.created_by|lower %}
                         <div class="row entry-block">
                             <div class="col s6">
-                                <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small delete right red"><span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i></a>
+                                <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small delete right red">
+                                    <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
+                                </a>
                             </div>
                             <div class="col s6">
-                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue"><span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i></a>
+                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue">
+                                    <span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i>
+                                </a>
                             </div>
                         </div>
                     {% endif %}
