--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,46 +1,77 @@
 {% extends "base.html" %}
-{% block content %}
 
-    <h1>{{ username }}'s Profile</h1>
+{% block content %}
 
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h5 class="left">My Account</h6>
+                <h1 class="center-align">{{ username }}&#8217;s Profile</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <h5 class="left">My Account</h5>
             </div>
         </div>
         <div class="row">
             <div class="col s12">
                 <p>Username &#58; <span>{{ username }}</span></p>
-                <a href="{{ url_for('update_profile', username=username) }}" class="btn-large blue">Update Details</a>
+                <a href="{{ url_for('update_profile', username=username) }}" class="btn-large edit blue">Update Details</a>
             </div>
         </div>
-    </div>
 
-    <div class="contributions-container">
+        <div class="contributions-container">
+            <div class="row">
+                <div class="col s12">
+                    <h2>My contributions</h2>
+                </div>
+            </div>
+            {% for term in terms %}
+                {% if term.created_by|lower == session.user|lower %}
+                    <div class="row">
+                        <div class="col s12 l4">
+                            <span class="term-name">{{ term.term_name }}</span>
+                        </div>
+                        <div class="col s12 l8">
+                            <span>{{ term.term_definition }}</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small delete right red">
+                                <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
+                            </a>
+                        </div>
+                        <div class="col s6">
+                            <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue">
+                                <span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i>
+                            </a>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+            <div class="row center-align add-entry">
+                <div class="col-s12">
+                    <a href="{{ url_for('add_definition') }}" class="btn-large add green">Add another&#33;</a>
+                </div>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col s12">
-                <h2>My contributions</h2>
+                <h2 class="center-align">Delete Account</h2>
             </div>
         </div>
-        {% for term in terms %}
-            {% if term.created_by|lower == session.user|lower %}
-                <div class="row">
-                    <div class="col s12 l4">
-                        <span>{{ term.term_name }}</span>
-                    </div>
-                    <div class="col s12 l8">
-                        <span>{{ term.term_definition }}</span>
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
-
-    <div class="row">
-        <div class="col s12">
-            <p>Delete the account for {{ username }}</p>
-            <a class="btn-large red" href="{{ url_for('delete_account', username=username)}}">Delete Account</a>
+        <div class="row center-align">
+            <div class="col s12">
+                <h4>Delete the account for {{ username }}</h4>
+            </div>
+        </div>
+        <div class="row center-align">
+            <div class="col s12">
+                <p class="warning"><i class="fas fa-exclamation-triangle yellow-text"></i> Warning&#33; This action cannot be undone&#33; You should only take this action if you are certain you want to delete your account.</p>
+                <a class="btn-large delete red" href="{{ url_for('delete_account', username=username)}}">Delete Account</a>
+            </div>
         </div>
     </div>
 
